--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Eric Linnert, Test Page
+title: Eric Linnert
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Eric Linnert!</h1>
