edited home page

--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@ title: Eric Linnert
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Eric Linnert!</h1>
-	<p>This is my page <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>This is my page. It's a work in progress... :)
+	<a href="/about">Read more about my life...</a>
+	</p>
 </div><!-- /.blurb -->
