--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
----
-layout: default
-title: Eric Linnert
----
-<div class="blurb">
-	<h1>Hi there, I'm Eric!</h1>
-	<p>This is my page. It's a work in progress... :)
-	<a href="/about">Read more about my life...</a>
-	</p>
-</div><!-- /.blurb -->
+Hello World
